# FullSpectrum-Studio

./: .gitignore  BENCHMARK.md  CHANGELOG.md  COLOR_VALIDATION.md  FINAL_REPORT.md  IDEAS.md  IMPLEMENTATION_PLAN.md  LICENSE  Package.swift  README.md  RESEARCH.md  ROADMAP.md  bambu_mixer_model.py  fullspectrum_engine.py  requirements-windows.txt
.github/workflows/: windows-release.yml  windows-tauri.yml
apps/windows-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-tauri/src-tauri/capabilities/: default.json
apps/windows-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/windows-tauri/src-tauri/src/runtime/: engine.rs  gpu.rs  logging.rs  mod.rs  models.rs  paths.rs  project.rs
desktop/: __init__.py  app_support.py  full_spectrum_studio.py
docs/: ARCHITECTURE.md  BAMBU_FORUM_POST_v0.4.3.md  BAMBU_FORUM_REPLY_MIKE_2026-05-29.md  BAMBU_FORUM_REPLY_RELIABILITY_2026-05-30.md  CORE_EXTRACTION_PLAN.md  MIGRATION_MAP.md  ORCASLICER_HANDOFF.md  RELEASE_NOTES_0.3.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.12_MACOS.md  RELEASE_NOTES_0.4.13.md  RELEASE_NOTES_0.4.14.md  RELEASE_NOTES_0.4.15.md  RELEASE_NOTES_0.4.16.md  RELEASE_NOTES_0.4.2.md  RELEASE_NOTES_0.4.3.md  RELEASE_NOTES_0.4.5.md  RELEASE_NOTES_0.4.6.md  RELEASE_NOTES_0.4.7.md  RELEASE_NOTES_0.4.8.md  RELEASE_NOTES_0.4.9.md  RELEASE_NOTES_0.4.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.5.1.md  SECURITY_PRIVACY.md  VALIDATION.md  WINDOWS_TAURI_MIGRATION.md
examples/: custom-palette.example.json
script/: build_and_run.sh
tests/: test_desktop.py  test_engine.py
tools/: benchmark_quality.py
(+40 files in other folders)
