[package]
name = "fullspectrum-studio"
version = "0.1.0"
description = "FullSpectrum Studio Windows desktop shell"
authors = ["FullSpectrum Studio contributors"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
name = "fullspectrum_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fullspectrum-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"

[features]
default = []
# TODO: Add optional wgpu dependency when the renderer contract is ready.
wgpu-runtime = []
